--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -37,3 +39,4 @@
     transform: translateY(0px);
   }
 }
+
